--- a/config/sync/views.view.programs.yml
+++ b/config/sync/views.view.programs.yml
@@ -1,10 +1,11 @@
-uuid: 1e42097b-bd60-4037-a942-78ee5c61f37c
+uuid: c8cb9f65-a8f0-460a-be91-4799065f47df
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.program.field_description
     - field.storage.program.field_end_date
+    - field.storage.program.field_program_manager
     - field.storage.program.field_start_date
     - system.menu.main
   module:
@@ -328,6 +329,69 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_program_manager:
+          id: field_program_manager
+          table: program__field_program_manager
+          field: field_program_manager
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Program manager'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
       filters: {  }
       sorts: {  }
       title: ' List of programs to come up'
@@ -346,6 +410,7 @@ display:
       tags:
         - 'config:field.storage.program.field_description'
         - 'config:field.storage.program.field_end_date'
+        - 'config:field.storage.program.field_program_manager'
         - 'config:field.storage.program.field_start_date'
   page_1:
     display_plugin: page
@@ -361,7 +426,7 @@ display:
         description: ''
         expanded: false
         parent: ''
-        weight: 2
+        weight: 1
         context: '0'
         menu_name: main
     cache_metadata:
@@ -373,4 +438,5 @@ display:
       tags:
         - 'config:field.storage.program.field_description'
         - 'config:field.storage.program.field_end_date'
+        - 'config:field.storage.program.field_program_manager'
         - 'config:field.storage.program.field_start_date'
