--- a/config/sync/field.storage.program.field_end_date.yml
+++ b/config/sync/field.storage.program.field_end_date.yml
@@ -1,4 +1,4 @@
-uuid: 2fcb8be3-c804-4897-8fc2-a96ed71587de
+uuid: abe68ebb-3653-44a0-b0b7-e14cf8a77fa4
 langcode: en
 status: true
 dependencies:
@@ -12,7 +12,7 @@ field_name: field_end_date
 entity_type: program
 type: datetime
 settings:
-  datetime_type: datetime
+  datetime_type: date
 module: datetime
 locked: false
 cardinality: 1
