--- a/config/sync/field.storage.program.field_start_date.yml
+++ b/config/sync/field.storage.program.field_start_date.yml
@@ -1,4 +1,4 @@
-uuid: 9ba3379d-94b8-4d8b-9504-930b64912d00
+uuid: a4cda774-2efd-4886-8fe4-ef1b0bf696b2
 langcode: en
 status: true
 dependencies:
@@ -12,7 +12,7 @@ field_name: field_start_date
 entity_type: program
 type: datetime
 settings:
-  datetime_type: datetime
+  datetime_type: date
 module: datetime
 locked: false
 cardinality: 1
